third_party/move/move-compiler/tests/move_check/unit_test/expected_failure_bad_value.unit_test.exp
error[E10003]: invalid attribute value
  ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:7:24
  │
7 │     #[expected_failure(abort_code=true)]
  │                        ^^^^^^^^^^^^^^^
  │                        │          │
  │                        │          Unsupported value in this assignment
  │                        Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:11:24
   │
11 │     #[expected_failure(abort_code=x"")]
   │                        ^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Unsupported value in this assignment
   │                        Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:15:24
   │
15 │     #[expected_failure(abort_code=b"")]
   │                        ^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Unsupported value in this assignment
   │                        Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:19:35
   │
 2 │ module 0x1::A {
   │             - Unbound constant 'Foo' in module '0x1::A'
   ·
19 │     #[expected_failure(abort_code=Foo)]
   │                                   ^^^ Invalid value in attribute assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:23:24
   │
23 │     #[expected_failure(abort_code=@0xC0FFEE)]
   │                        ^^^^^^^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Unsupported value in this assignment
   │                        Invalid value in attribute assignment

